Refactor code structure for improved readability and maintainability

--- a/app.html
+++ b/app.html
@@ -136,6 +136,7 @@
     </div>
 
     <script src="js/formation-data.js"></script>
+    <script src="js/formateur-detailed-guide.js"></script>
     <script src="js/firebase-config.js"></script>
     <script src="js/app.js"></script>
 </body>
