--- a/app.html
+++ b/app.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Espace de formation ARCHICAD personnalisé — AtelierLO">
+    <meta name="theme-color" content="#00A6C8">
     <title>AtelierLO — Espace Formation ARCHICAD</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
@@ -25,16 +28,31 @@
             <p class="login-subtitle">Espace Formation ARCHICAD</p>
             <form id="login-form">
                 <div class="form-group">
-                    <label class="form-label">Adresse email</label>
-                    <input type="email" class="form-input" id="login-email" placeholder="votre@email.com" required>
+                    <label class="form-label" for="login-email">Adresse email</label>
+                    <input type="email" class="form-input" id="login-email" placeholder="votre@email.com" required autocomplete="email" aria-label="Adresse email">
                 </div>
                 <div class="form-group">
-                    <label class="form-label">Mot de passe</label>
-                    <input type="password" class="form-input" id="login-password" placeholder="••••••••" required>
+                    <label class="form-label" for="login-password">Mot de passe</label>
+                    <input type="password" class="form-input" id="login-password" placeholder="••••••••" required autocomplete="current-password" aria-label="Mot de passe">
                 </div>
                 <button type="submit" class="login-btn" id="login-btn">Se connecter</button>
                 <div class="login-error" id="login-error"></div>
+                <button type="button" class="forgot-password-link" id="forgot-password-btn" onclick="showPasswordReset()">
+                    Mot de passe oublié ?
+                </button>
             </form>
+
+            <!-- Password Reset Modal -->
+            <div class="password-reset-modal" id="password-reset-modal" style="display:none">
+                <p>Entrez votre email pour recevoir un lien de réinitialisation :</p>
+                <input type="email" class="form-input" id="reset-email" placeholder="votre@email.com" aria-label="Email de réinitialisation">
+                <div class="reset-actions">
+                    <button class="login-btn" onclick="handlePasswordReset()">Envoyer</button>
+                    <button type="button" class="forgot-password-link" onclick="hidePasswordReset()">Annuler</button>
+                </div>
+                <div class="login-error" id="reset-error"></div>
+                <div class="reset-success" id="reset-success"></div>
+            </div>
             <a href="index.html" class="login-back">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 12H5M12 19l-7-7 7-7"/></svg>
                 Retour à l'accueil
@@ -88,6 +106,14 @@
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/></svg>
                         Mon carnet
                     </button>
+                    <button class="nav-item" data-view="calendar" onclick="navigateTo('calendar')">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+                        Planning
+                    </button>
+                    <button class="nav-item" data-view="evaluation" onclick="navigateTo('evaluation')">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
+                        Évaluation
+                    </button>
                 </div>
 
                 <div class="nav-section">
@@ -116,12 +142,23 @@
                     <h1 class="content-title" id="content-title">Dashboard</h1>
                 </div>
                 <div class="header-right">
+                    <!-- Global Search -->
+                    <div class="global-search-wrapper">
+                        <button class="global-search-btn" onclick="toggleGlobalSearch()" aria-label="Rechercher">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
+                        </button>
+                    </div>
                     <div class="progress-mini">
                         <div class="progress-mini-bar">
                             <div class="progress-mini-fill" id="progress-mini-fill" style="width: 0%"></div>
                         </div>
                         <span id="progress-mini-text">0%</span>
                     </div>
+                    <!-- Dark Mode Toggle -->
+                    <button class="dark-mode-btn" id="dark-mode-btn" onclick="toggleDarkMode()" aria-label="Basculer le mode sombre">
+                        <svg class="icon-sun" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
+                        <svg class="icon-moon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18" style="display:none"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
+                    </button>
                     <button class="formateur-toggle" id="formateur-toggle" onclick="toggleFormateurMode()" style="display:none">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>
                         <span class="toggle-text">Mode formateur</span>
@@ -135,6 +172,42 @@
         </main>
     </div>
 
+    <!-- Global Search Overlay -->
+    <div class="search-overlay" id="search-overlay" style="display:none">
+        <div class="search-modal">
+            <div class="search-input-wrapper">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
+                <input type="text" id="global-search-input" placeholder="Rechercher dans toute la formation..." autofocus aria-label="Recherche globale">
+                <kbd>Esc</kbd>
+            </div>
+            <div class="search-results" id="search-results"></div>
+        </div>
+    </div>
+
+    <!-- Session Timer Widget -->
+    <div class="timer-widget" id="timer-widget" style="display:none">
+        <div class="timer-display" id="timer-display">00:00:00</div>
+        <div class="timer-controls">
+            <button onclick="toggleTimer()" id="timer-toggle-btn" aria-label="Démarrer/Pause le timer">
+                <svg class="play-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"><polygon points="5 3 19 12 5 21 5 3"/></svg>
+                <svg class="pause-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16" style="display:none"><rect x="6" y="4" width="4" height="16"/><rect x="14" y="4" width="4" height="16"/></svg>
+            </button>
+            <button onclick="resetTimer()" aria-label="Réinitialiser le timer">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"><polyline points="1 4 1 10 7 10"/><path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"/></svg>
+            </button>
+        </div>
+    </div>
+
+    <!-- Toast notifications -->
+    <div class="toast-container" id="toast-container"></div>
+
+    <!-- Firebase SDK (v9 compat) -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <!-- jsPDF for PDF export -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <!-- App scripts -->
     <script src="js/formation-data.js"></script>
     <script src="js/formateur-detailed-guide.js"></script>
     <script src="js/firebase-config.js"></script>
