Refactor code structure for improved readability and maintainability

--- a/app.html
+++ b/app.html
@@ -114,6 +114,14 @@
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
                         Évaluation
                     </button>
+                    <button class="nav-item" data-view="badges" onclick="navigateTo('badges')">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="8" r="7"/><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"/></svg>
+                        Badges & trophées
+                    </button>
+                    <button class="nav-item nav-formateur-only" data-view="students" onclick="navigateTo('students')" id="nav-students-btn" style="display:none">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+                        Gestion élèves
+                    </button>
                 </div>
 
                 <div class="nav-section">
