--- a/app.html
+++ b/app.html
@@ -122,6 +122,11 @@
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
                         Gestion élèves
                     </button>
+                    <button class="nav-item" data-view="messages" onclick="navigateTo('messages')" id="nav-messages-btn">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg>
+                        Messagerie
+                        <span class="msg-nav-badge" id="msg-unread-badge" style="display:none">0</span>
+                    </button>
                 </div>
 
                 <div class="nav-section">
