Enhance SEO and metadata in index.html; add robots.txt and sitemap.xml for better indexing

--- a/index.html
+++ b/index.html
@@ -3,21 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Formation ARCHICAD personnalisée par AtelierLO — 20 jours de formation complète, de la prise en main jusqu'aux rendus 3D avec Enscape & 3ds Max.">
-    <meta name="keywords" content="ARCHICAD, formation, BIM, AtelierLO, CAO, architecture, Enscape, 3ds Max, SketchUp">
+    <meta name="description" content="Formation ARCHICAD personnalisée par AtelierLO — 20 jours de formation complète en visio individuelle. De la prise en main jusqu'aux rendus 3D professionnels avec Enscape & 3ds Max. Programme adaptable, suivi personnalisé.">
+    <meta name="keywords" content="formation ARCHICAD, formation BIM, AtelierLO, formation architecture, formation CAO, Enscape, 3ds Max, SketchUp, ARCHICAD débutant, formation visio ARCHICAD, apprendre ARCHICAD, cours ARCHICAD, formation individuelle ARCHICAD, rendu 3D architecture">
     <meta name="author" content="AtelierLO — Lucien">
     <meta name="theme-color" content="#00A6C8">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://lo-archicad-formation.web.app/">
+    <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
+    <link rel="apple-touch-icon" href="icons/icon-192.png">
     <!-- Open Graph -->
-    <meta property="og:title" content="AtelierLO — Formation ARCHICAD">
-    <meta property="og:description" content="Maîtrisez ARCHICAD de A à Z. Formation personnalisée en visio, du débutant au rendu 3D professionnel.">
+    <meta property="og:title" content="AtelierLO — Formation ARCHICAD personnalisée en visio">
+    <meta property="og:description" content="Maîtrisez ARCHICAD de A à Z. 20 jours de formation individuelle en visio, du débutant au rendu 3D professionnel avec Enscape & 3ds Max.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://atelierlo-formation.web.app">
-    <meta property="og:image" content="https://atelierlo-formation.web.app/icons/og-image.png">
+    <meta property="og:url" content="https://lo-archicad-formation.web.app/">
+    <meta property="og:image" content="https://lo-archicad-formation.web.app/icons/icon-512.png">
     <meta property="og:locale" content="fr_FR">
+    <meta property="og:site_name" content="AtelierLO">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="AtelierLO — Formation ARCHICAD">
-    <meta name="twitter:description" content="Maîtrisez ARCHICAD de A à Z. Formation personnalisée en visio.">
+    <meta name="twitter:title" content="AtelierLO — Formation ARCHICAD personnalisée">
+    <meta name="twitter:description" content="Maîtrisez ARCHICAD de A à Z. 20 jours de formation individuelle en visio, du débutant au rendu 3D pro.">
+    <meta name="twitter:image" content="https://lo-archicad-formation.web.app/icons/icon-512.png">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Course",
+        "name": "Formation ARCHICAD — AtelierLO",
+        "description": "Formation ARCHICAD personnalisée en visio individuelle. 20 jours de formation complète, de la prise en main jusqu'aux rendus 3D professionnels avec Enscape et 3ds Max.",
+        "provider": {
+            "@type": "Organization",
+            "name": "AtelierLO",
+            "url": "https://lo-archicad-formation.web.app"
+        },
+        "educationalLevel": "Débutant à avancé",
+        "teaches": ["ARCHICAD", "BIM", "Modélisation 3D", "Rendu architectural", "Enscape", "3ds Max"],
+        "timeRequired": "P20D",
+        "courseMode": "online",
+        "inLanguage": "fr",
+        "url": "https://lo-archicad-formation.web.app",
+        "image": "https://lo-archicad-formation.web.app/icons/icon-512.png",
+        "hasCourseInstance": {
+            "@type": "CourseInstance",
+            "courseMode": "online",
+            "instructor": {
+                "@type": "Person",
+                "name": "Lucien",
+                "worksFor": {
+                    "@type": "Organization",
+                    "name": "AtelierLO"
+                }
+            }
+        }
+    }
+    </script>
     <link rel="manifest" href="manifest.json">
     <title>AtelierLO — Formation ARCHICAD</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,8 +105,8 @@
             </div>
             <h1>Maîtrisez <span class="text-gradient">ARCHICAD</span> de A à Z</h1>
             <p class="hero-subtitle">
-                Un parcours de formation complet et structuré, de la prise en main 
-                jusqu'aux rendus professionnels avec Enscape & 3ds Max.
+                Un parcours de <strong>formation complète en 20 jours</strong>, en visio individuelle. 
+                De la prise en main jusqu'aux <strong>rendus professionnels</strong> avec Enscape & 3ds Max.
             </p>
             <div class="hero-actions">
                 <a href="app.html" class="btn btn-primary">
